# halo

./: .dockerignore  .gitignore  README.md
apps/api/: Dockerfile  Procfile  README.md  pyproject.toml  requirements.txt
apps/api/app/: __init__.py  main.py
apps/api/app/core/: __init__.py  config.py
apps/api/app/db/: __init__.py  models.py  session.py
apps/api/app/models/: __init__.py  incident.py
apps/api/app/openapi/: incident-api.yaml
apps/api/app/repositories/: __init__.py  incidents.py
apps/api/app/routes/: __init__.py  health.py  incidents.py  product_api.py  specs.py
apps/api/app/schemas/: __init__.py  incident.py  traces.py
apps/api/app/services/: __init__.py  chaos.py  jaguar_actions.py  product_data.py  runbooks.py  truefoundry.py  truefoundry_traces.py  workflow.py
apps/api/scripts/: seed_live_approval_demo.py  seed_live_jaguar_demo_incident.py  seed_resilience_demo.py
apps/api/tests/: test_persistence_and_custom_apis.py  test_trace_observability.py  test_truefoundry_integration.py
apps/web/: README.md  UI-MIGRATION.md  package-lock.json  package.json
apps/web/app/: halo.css  (+6 more)
docs-site/: README.md  api-reference.mdx  architecture.mdx  docs.json  how-it-works.mdx  introduction.mdx  truefoundry.mdx
infra/demo/: scenarios.md
infra/deploy/: backend-deployment.md  backend.env.example  live-setup-status.md  public-api-readiness.md  truefoundry-registration-checklist.md  validate-public-api.sh
infra/guardrails/: halo-guardrails.yaml
infra/openapi/: runbooks-api.yaml
infra/prompts/: halo-blackout.md  halo-degraded.md  halo-normal.md
(+46 files in other folders)
