[project]
name = "halo-api"
version = "0.1.0"
description = "FastAPI backend scaffold for the Halo incident commander."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic-settings>=2.6.0",
  "sqlmodel>=0.0.24",
  "uvicorn[standard]>=0.32.0"
]

[project.optional-dependencies]
dev = [
  "httpx2>=0.28.0",
  "pytest>=8.3.0",
  "ruff>=0.8.0"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
